2007-11-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* pcvs-parse.el (cvs-parse-table): Ignore errors when looking up files
	in order to determine if there's a conflict.

2007-11-16  Juri Linkov  <juri@jurta.org>

	* man.el (Man-heading-regexp): Add 0-9.
	(Man-first-heading-regexp): Remove leading space [ \t]* before NAME.

2007-11-15  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/cc-engine.el (c-crosses-statement-barrier-p):
	Fix typo in docstring.

	* emulation/cua-base.el (cua-paste-pop): Fix typo in docstring.
	(cua-highlight-region-shift-only): Doc fix.

2007-11-15  Richard Stallman  <rms@gnu.org>

	* bindings.el (esc-map): Bind C-M-l here; moved from reposition.el.

	* reposition.el (reposition-window):
	Binding C-M-l moved to bindings.el.

	* bindings.el (ctl-x-4-map): Bind C-x 4 a here; moved from add-log.el.

	* add-log.el (add-change-log-entry-other-window):
	Key binding C-x 4 a moved to bindings.el.

	* bindings.el (minibuffer-local-map): Bind C-tab here; moved
	from filecache.el.

	* filecache.el: Minibuffer map bindings moved to bindings.el.

2007-11-14  Jason Rumney  <jasonr@gnu.org>

	* international/mule-cmds.el (set-locale-environment):
	Set default-file-name-coding-system from system defaults on Windows.

2007-11-14  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-parent-bptno-enabled): New variable.
	(gdb-breakpoint-regexp, gdb-mouse-toggle-breakpoint-margin)
	(gdb-mouse-toggle-breakpoint-fringe, gdb-delete-breakpoint)
	(gdb-goto-breakpoint): Generalise for breakpoints with multiple
	locations.
	(gdb-info-breakpoints-custom, gdb-assembler-custom)
	(gdb-toggle-breakpoint): Update for new gdb-breakpoint-regexp.
	(gdb-put-breakpoint-icon): Only display icon for parent breakpoint.

2007-11-11  Juanma Barranquero  <lekktu@gmail.com>

	* international/iso-cvt.el (iso-translate-conventions): Doc fix.
	(iso-aggressive-german-trans-tab, iso-conservative-german-trans-tab)